--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@vercel/analytics": "^1.1.1",
+		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"framer-motion": "^10.16.16",
