--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@headlessui/react": "^1.7.17",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@react-google-maps/api": "^2.19.2",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
@@ -19,6 +20,7 @@
 		"framer-motion": "^10.16.16",
 		"lucide-react": "^0.294.0",
 		"next": "14.0.3",
+		"popmotion": "^11.0.5",
 		"query-string": "^8.1.0",
 		"react": "^18",
 		"react-dom": "^18.2.0",
