--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@headlessui/react": "^1.7.17",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.0.2",
 		"@react-google-maps/api": "^2.19.2",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/speed-insights": "^1.0.2",
