--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
 		"@react-google-maps/api": "^2.19.2",
+		"@tsparticles/engine": "^3.0.2",
+		"@tsparticles/react": "^3.0.0",
+		"@tsparticles/slim": "^3.0.2",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
