--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
 		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
-		"framer-motion": "^10.16.16",
+		"framer-motion": "^10.18.0",
 		"lucide-react": "^0.294.0",
-		"next": "14.0.3",
+		"next": "^14.1.0",
 		"popmotion": "^11.0.5",
 		"query-string": "^8.1.0",
-		"react": "^18",
+		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-swipe": "^6.0.4",
 		"react-swipeable": "^7.0.1",
@@ -43,7 +43,7 @@
 		"@types/react-swipe": "^6.0.4",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
-		"eslint-config-next": "14.0.3",
+		"eslint-config-next": "^14.1.0",
 		"postcss": "^8",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
