--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"framer-motion": "^10.18.0",
 		"lucide-react": "^0.294.0",
 		"next": "^14.1.0",
+		"next-international": "^1.2.4",
 		"popmotion": "^11.0.5",
 		"query-string": "^8.1.0",
 		"react": "^18.2.0",
