--- a/package.json
+++ b/package.json
@@ -9,35 +9,41 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.7.17",
+		"@headlessui/react": "^1.7.19",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-slot": "^1.0.2",
 		"@react-google-maps/api": "^2.19.2",
-		"@tsparticles/engine": "^3.0.2",
+		"@tsparticles/engine": "^3.3.0",
 		"@tsparticles/react": "^3.0.0",
-		"@tsparticles/slim": "^3.0.2",
+		"@tsparticles/slim": "^3.3.0",
 		"@vercel/analytics": "^1.1.1",
 		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
-		"clsx": "^2.0.0",
-		"framer-motion": "^10.18.0",
-		"lucide-react": "^0.294.0",
-		"next": "^14.1.0",
+		"clsx": "^2.1.1",
+		"date-fns": "^3.6.0",
+		"framer-motion": "^11.1.7",
+		"lucide-react": "^0.376.0",
+		"next": "^14.2.3",
 		"next-international": "^1.2.4",
 		"popmotion": "^11.0.5",
-		"query-string": "^8.1.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
+		"query-string": "^9.0.0",
+		"react": "^18.3.1",
+		"react-day-picker": "^8.10.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.2.1",
 		"react-swipe": "^6.0.4",
 		"react-swipeable": "^7.0.1",
 		"styled-components": "^6.1.1",
 		"swipe-js-iso": "^2.1.5",
-		"tailwind-merge": "^2.1.0",
+		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
-		"zustand": "^4.4.7"
+		"weather-icons-react": "^1.2.0",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
+		"@types/next": "^9.0.0",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
