--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.19",
+		"@hookform/resolvers": "^3.4.0",
+		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-label": "^2.0.2",
@@ -32,14 +34,18 @@
 		"react": "^18.3.1",
 		"react-day-picker": "^8.10.1",
 		"react-dom": "^18.3.1",
+		"react-hook-form": "^7.51.4",
 		"react-icons": "^5.2.1",
 		"react-swipe": "^6.0.4",
 		"react-swipeable": "^7.0.1",
+		"sass": "^1.77.2",
+		"scss": "^0.2.4",
 		"styled-components": "^6.1.1",
 		"swipe-js-iso": "^2.1.5",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"weather-icons-react": "^1.2.0",
+		"zod": "^3.23.8",
 		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
