--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
 		"@vercel/speed-insights": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"convex": "^1.12.0",
+		"convex-helpers": "^0.1.38",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.1.7",
 		"lucide-react": "^0.376.0",
@@ -58,6 +60,8 @@
 		"eslint": "^8",
 		"eslint-config-next": "^14.1.0",
 		"postcss": "^8",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
 	}
