--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"convex-helpers": "^0.1.38",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.1.7",
+		"lenis": "^1.0.45",
 		"lucide-react": "^0.376.0",
 		"next": "^14.2.3",
 		"next-international": "^1.2.4",
